--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,12 @@
 
 /* Force light theme globally */
 html {
-  color-scheme: only light;
-  background-color: #99b4c8; /* Your fixed background */
+  color-scheme: only light; /* Your fixed background */
 }
 
 body {
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  background-color: #99b4c8; /* Apply again on body just in case */
+  overflow-x: hidden; /* Apply again on body just in case */
   color: black;
   font-family: "Merienda", cursive;
 }
